--- a/templates/game.html
+++ b/templates/game.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Game</title>
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
     <h1>Betting Game</h1>
