--- a/templates/store.html
+++ b/templates/store.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Store</title>
-    <link rel="stylesheet" type="text/css" href="store.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='store.css') }}">
 </head>
 <body>
     <h1>Store</h1>
