--- a/templates/store.html
+++ b/templates/store.html
@@ -11,4 +11,4 @@
         <button type="submit" name="buy_flag" value="1">Buy Flag for $100,000,000</button>
     </form>
     {% if message %}
-    <p>{{ message }}</
+    <p>{{ message }}</p>
