--- a/templates/game.html
+++ b/templates/game.html
@@ -12,7 +12,7 @@
             <label>Enter your bet:</label>
             <input type="number" name="bet" max="{{ money }}" required>
             <label>Choose a number between 1 and 50:</label>
-            <input type="number" name="number" required>
+            <input type="number" name="number" min="1" required>
             <input type="submit" value="Place Bet">
         </form>
         {% if message %}
