--- a/static/index.css
+++ b/static/index.css
@@ -65,8 +65,8 @@ form input[type=submit]:hover {
 .alert {
     margin-top: 20px;
     padding: 10px;
-    background-color: #f8d7da;
-    color: #721c24;
+    background-color: #e4f4ae;
+    color: #9787ee;
     border-radius: 5px;
     font-size: 16px;
 }
