--- a/templates/store.html
+++ b/templates/store.html
@@ -10,6 +10,9 @@
     <form method="POST" action="/buy_flag">
         <button type="submit" name="buy_flag" value="1">Buy Flag for $100,000,000</button>
     </form>
+    <br>
+    <br>
+    <p><a href="/">Back to Home</a></p>
     {% if message %}
     <p>{{ message }}</p>
     {% endif %}
